enhance visual design to match helloally.ai
- Import Google Fonts: Inter, STIX Two Text, Yeseva One
- Update site title to just 'Ally' with Yeseva One display font
- Increase page width to 1400px (from 900px) for better use of space
- Apply serif fonts (STIX Two Text) to all headings
- Use Inter for body text with proper letter spacing
- Match logo color (#264D8E) from helloally.ai
- Improve typography with exact font sizes and weights from helloally.ai
- Add better responsive breakpoints for wider layouts
- Enhance header with flexbox layout
- Polish footer styling with better spacing
- Add smooth transitions and hover effects

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Ally Developer Hub
+title: Ally
 description: Open-source mental health AI platform for empowering counselors
 theme: minima
 markdown: kramdown
